--- a/src/components/input-text/input-text.scss
+++ b/src/components/input-text/input-text.scss
@@ -16,7 +16,7 @@
     width: 100%;
     max-width: 320px;
     height: 44px;
-    padding-left: 15px;
+    padding: 0 15px;
     border: 1px solid $dark-shade-25;
     border-radius: 4px;
     @extend %body-text;
