--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -1,9 +1,12 @@
 .date-dropdown {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(128px, 1fr));
   gap: 20px;
-  justify-content: space-between;
   width: 100%;
-  max-width: 320px;
+
+  @media (max-width: $phoneWidth) {
+    position: relative;
+  }
 
   &__wrapper {
     width: 100%;
@@ -71,7 +74,7 @@
   }
 
   @media (max-width: $smPhoneWidth) {
-    max-width: 260px;
+    max-width: 240px;
     padding: 20px 10px;
   }
 
@@ -104,7 +107,7 @@
   }
 
   @media (max-width: $smPhoneWidth) {
-    --adp-day-cell-height: 32px;
+    --adp-day-cell-height: 30px;
   }
 
   &-nav--title {
@@ -162,7 +165,16 @@
       }
     }
 
-    &.-range-from- {
+    &.-range-from-.-range-to- {
+      border-radius: 50%;
+
+      &::before {
+        background: none;
+      }
+    }
+
+    &.-range-from-,
+    &.-min-date-.-in-range- {
       color: #ffffff;
       font-weight: 700;
       background: $mainGradient;
@@ -198,7 +210,8 @@
       }
     }
 
-    &.-focus- {
+    &.-focus-,
+    &.-min-date-.-in-range- {
       color: #ffffff;
       font-weight: 700;
       background: $mainGradient;
@@ -228,6 +241,9 @@
     &.-disabled-.-range-from-,
     &.-disabled-.-range-from-::before {
       opacity: 0.3;
+      background: none;
+      font-weight: initial;
+      color: initial;
     }
   }
 
