--- a/src/assets/scss/utils/fonts.scss
+++ b/src/assets/scss/utils/fonts.scss
@@ -2,8 +2,8 @@
   font-weight: 700;
   font-family: 'Montserrat';
   font-style: normal;
-  src: url('/src/assets/fonts/montserrat-bold-webfont.woff2') format('woff2'),
-    url('/src/assets/fonts/montserrat-bold-webfont.woff') format('woff');
+  src: url('/src/assets/fonts/montserrat/montserrat-bold-webfont.woff2') format('woff2'),
+    url('/src/assets/fonts/montserrat/montserrat-bold-webfont.woff') format('woff');
   font-display: swap;
 }
 
@@ -12,8 +12,8 @@
   font-family: 'Montserrat';
   font-style: normal;
   src: local('Montserrat'),
-    url('/src/assets/fonts/montserrat-regular-webfont.woff2') format('woff2'),
-    url('/src/assets/fonts/montserrat-regular-webfont.woff') format('woff');
+    url('/src/assets/fonts/montserrat/montserrat-regular-webfont.woff2') format('woff2'),
+    url('/src/assets/fonts/montserrat/montserrat-regular-webfont.woff') format('woff');
   font-display: swap;
 }
 
@@ -22,7 +22,7 @@
   font-family: 'Material Icons';
   font-style: normal;
   src: local('Material Icons'),
-    url('/src/assets/fonts/material-icons-regular.woff2') format('woff2'),
-    url('/src/assets/fonts/material-icons-regular.woff') format('woff');
-  font-display: swap;
+    url('/src/assets/fonts/material-icons/material-icons-regular.woff2') format('woff2'),
+    url('/src/assets/fonts/material-icons/material-icons-regular.woff') format('woff');
+  font-display: auto;
 }
