--- a/src/components/mobile-footer/mobile-footer.pug
+++ b/src/components/mobile-footer/mobile-footer.pug
@@ -10,7 +10,7 @@ mixin mobile-footer
     ]
   footer.mobile-footer
     .mobile-footer__logo
-      +logo('text')
+      +logo({ withText: true })
     p.mobile-footer__copyright Copyright © 2018 Toxin отель. Все права защищены.
     .mobile-footer__social
       each link in socialLinks
