--- a/src/components/type-example/type-example.pug
+++ b/src/components/type-example/type-example.pug
@@ -9,4 +9,4 @@ mixin type-example({ tag, text })
 
   .type-example(class=`${classes[tag]}`)
     .type-example__tag= tag
-    .type-example__text= text
+    .type-example__text!= text
