--- a/src/pages/sign-in/sign-in.pug
+++ b/src/pages/sign-in/sign-in.pug
@@ -3,6 +3,6 @@ include /components/login-form/login-form
 block variables
   - const title = "Вход";
 block content
-  .login
-    .login__form
+  .sign-in
+    .sign-in__form
       +login-form
