--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -5,7 +5,6 @@
   margin: 0;
   padding: 0;
   color: $mainBrandColor;
-  line-height: 1;
   text-align: center;
   text-decoration: none;
   background: none;
@@ -74,18 +73,18 @@
   &_size {
     &_m {
       min-width: 99px;
-      padding-top: 16px;
-      padding-bottom: 16px;
+      padding-top: 14px;
+      padding-bottom: 15px;
     }
 
     &_s {
       padding-top: 8px;
-      padding-bottom: 8px;
+      padding-bottom: 9px;
     }
 
     &_xs {
-      padding-top: 4px;
-      padding-bottom: 4px;
+      padding-top: 0;
+      padding-bottom: 0;
     }
   }
 }
