--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -76,6 +76,7 @@
 
   &__buttons {
     display: flex;
+    align-items: center;
     justify-content: space-between;
 
     @media screen and (max-width: $smDesktopWidth) {
