--- a/src/components/login-form/login-form.scss
+++ b/src/components/login-form/login-form.scss
@@ -1,5 +1,6 @@
 .login-form {
   max-width: 380px;
+  width: 100%;
   background-color: #fff;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
 
@@ -21,7 +22,7 @@
   }
 
   &__button {
-    margin-bottom: 30px;
+    margin-bottom: 28px;
   }
 
   &__login {
