--- a/src/components/registration-form/registration-form.scss
+++ b/src/components/registration-form/registration-form.scss
@@ -1,4 +1,5 @@
 .registration-form {
+  width: 100%;
   max-width: 380px;
   background-color: #fff;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
@@ -34,11 +35,11 @@
   }
 
   &__toggle {
-    margin-bottom: 25px;
+    margin-bottom: 28px;
   }
 
   &__button {
-    margin-bottom: 30px;
+    margin-bottom: 28px;
   }
 
   &__login {
