--- a/src/components/reservation-form/reservation-form.scss
+++ b/src/components/reservation-form/reservation-form.scss
@@ -140,6 +140,8 @@
   &__total {
     display: flex;
     justify-content: space-between;
+    //display: grid;
+    //grid-template-columns: min-content 1fr min-content;
     margin-bottom: 20px;
     @extend %item-title;
 
