--- a/src/pages/colors-types/colors-types.pug
+++ b/src/pages/colors-types/colors-types.pug
@@ -20,8 +20,8 @@ block variables
       {tag: 'H1', text: 'This one is the sub-section or widget title'},
       {tag: 'H2', text: 'Next one is the item title inside widgets'},
       {tag: 'H3', text: 'This is a label or CTA text'},
-      {tag: 'Body', text: `This is the body text which is used
-      for most of the design, like paragraphs, lists, etc.`},
+      {tag: 'Body', text: `This is&nbsp;the body text which is&nbsp;used
+        for most of&nbsp;the design, like paragraphs, lists, etc.`},
     ]
 block content
   .colors-types
