--- a/src/pages/colors-types/colors-types.scss
+++ b/src/pages/colors-types/colors-types.scss
@@ -3,7 +3,7 @@
   background-color: #fff;
 
   &__header {
-    margin-bottom: 62px;
+    margin-bottom: 65px;
     margin-left: 30px;
     padding-top: 30px;
   }
@@ -23,7 +23,12 @@
     margin-bottom: 20px;
   }
 
-  &__type:not(:last-child) {
-    margin-bottom: 51px;
+  &__type:not(:first-child) {
+    margin-top: 51px;
+  }
+
+  &__type:last-child {
+    max-width: 410px;
+    margin-top: 48px;
   }
 }
