--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -3,7 +3,7 @@
   background-color: #fff;
 
   &__header {
-    margin-bottom: 63px;
+    margin-bottom: 61px;
     margin-left: 30px;
     padding-top: 30px;
   }
@@ -17,14 +17,15 @@
 
   &__row {
     display: flex;
+    align-items: baseline;
     margin-bottom: 100px;
 
     &_margin_l {
-      margin-bottom: 172px;
+      margin-bottom: 166px;
     }
 
     &_margin_xl {
-      margin-bottom: 221px;
+      margin-bottom: 225px;
     }
   }
 
@@ -34,6 +35,10 @@
 
     &_size_l {
       max-width: 720px;
+    }
+
+    &_align_center {
+      align-self: center;
     }
 
     &:nth-child(2) {
@@ -46,19 +51,23 @@
   }
 
   &__block + &__block {
-    margin-top: 20px;
+    margin-top: 21px;
   }
 
   &__block + &__block_margin_m {
-    margin-top: 35px;
+    margin-top: 38px;
   }
 
   &__block + &__block_margin_l {
-    margin-top: 40px;
+    margin-top: 41px;
   }
 
   &__block + &__block_margin_xl {
     margin-top: 45px;
+  }
+
+  &__block + &__block_margin_xxl {
+    margin-top: 47px;
   }
 
   &__block_size_s {
@@ -68,6 +77,10 @@
   &__title {
     margin: 0 0 16px;
     @extend %label-text;
+
+    &_margin_s {
+      margin: 0 0 14px;
+    }
   }
 
   &__checkbox {
@@ -87,7 +100,7 @@
   &__toggle {
     display: flex;
     flex-direction: column;
-    row-gap: 20px;
+    row-gap: 17px;
   }
 
   &__button-like {
@@ -106,7 +119,7 @@
 
   &__buttons {
     display: flex;
-    margin-bottom: 27px;
+    margin-bottom: 30px;
 
     button:nth-child(1) {
       margin-right: 20px;
