--- a/src/pages/headers-footers/headers-footers.scss
+++ b/src/pages/headers-footers/headers-footers.scss
@@ -7,11 +7,12 @@
     padding-top: 30px;
   }
 
-  &__wrapper:not(:last-child) {
-    margin-bottom: 37px;
+  &__wrapper:not(:first-child) {
+    margin-top: 39px;
   }
 
   &__wrapper:last-child {
+    margin-top: 36px;
     margin-bottom: 140px;
   }
 }
