--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -3,7 +3,7 @@
 
   &__pictures {
     display: grid;
-    grid-template-rows: repeat(2, 243px);
+    grid-template-rows: 243px 242px;
     grid-template-columns: repeat(3, auto);
     max-width: 1920px;
     margin: 0 auto 70px;
