--- a/src/pages/search-room/search-room.scss
+++ b/src/pages/search-room/search-room.scss
@@ -2,11 +2,11 @@
   display: grid;
   grid-auto-rows: auto;
   grid-template-areas: '. aside content .';
-  grid-template-columns: auto 266px minmax(320px, 835px) auto;
+  grid-template-columns: auto 266px minmax(320px, 834px) auto;
   justify-content: space-between;
   width: 100%;
-  max-width: 1275px;
-  margin: 30px auto 71px;
+  max-width: 1280px;
+  margin: 30px auto 73px;
   column-gap: 20px;
 
   @media screen and (max-width: $tableWidth) {
@@ -28,7 +28,7 @@
   }
 
   &__date-filter {
-    margin-bottom: 20px;
+    margin-bottom: 21px;
   }
 
   &__guest {
@@ -41,7 +41,7 @@
 
   &__checkbox {
     max-width: 223px;
-    margin-bottom: 30px;
+    margin-bottom: 28px;
 
     &:nth-child(5) {
       max-width: 260px;
@@ -61,7 +61,7 @@
   }
 
   &__checkbox + &__checkbox {
-    margin-bottom: 25px;
+    margin-bottom: 29px;
   }
 
   &__comfort {
@@ -74,7 +74,7 @@
   }
 
   &__title {
-    margin: 0 0 20px;
+    margin: 0 0 22px;
     @extend %sub-section-title;
   }
 
@@ -82,7 +82,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
     width: 100%;
-    margin-bottom: 44px;
+    margin-bottom: 43px;
     column-gap: 12px;
     row-gap: 20px;
 
@@ -92,7 +92,8 @@
   }
 
   &__pagination {
-    width: min-content;
-    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    margin-right: 15px;
   }
 }
