--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -115,6 +115,10 @@
     font-weight: $boldFontWeight;
     font-size: $titleFontSize;
     line-height: 1.2;
+
+    @media (max-width: $smPhoneWidth) {
+      font-size: 1.1rem;
+    }
   }
 
   &-nav--action {
