--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -40,7 +40,7 @@ mixin footer
               li.footer__list-item
                 a.footer__link(href="/mock-address")= link
         .footer__column.footer__column_size_m
-          h3.footer__title Подписка
+          h3.footer__title.footer__title_size_s Подписка
           p.footer__subscribe Получайте специальные предложения и новости сервиса
           +subscription-field
     .footer__copyright
