--- a/src/components/mobile-footer/mobile-footer.scss
+++ b/src/components/mobile-footer/mobile-footer.scss
@@ -6,7 +6,7 @@
   width: 100%;
   max-width: 768px;
   margin: 0 auto;
-  padding: 120px 0;
+  padding: 120px 0 118px;
   background-color: $background-color;
   box-shadow: 0 10px 20px $dark-shade-5;
 
