--- a/src/components/login-form/login-form.scss
+++ b/src/components/login-form/login-form.scss
@@ -5,7 +5,7 @@
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
 
   &__inner {
-    padding: 40px 30px 30px;
+    padding: 40px 30px 31px;
   }
 
   &__title {
@@ -14,7 +14,7 @@
   }
 
   &__text-fields {
-    margin-bottom: 20px;
+    margin-bottom: 22px;
   }
 
   &__text-field:not(:last-child) {
@@ -22,12 +22,12 @@
   }
 
   &__button {
-    margin-bottom: 28px;
+    margin-bottom: 30px;
   }
 
   &__login {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     justify-content: space-between;
   }
 
