--- a/src/components/toggle/toggle.scss
+++ b/src/components/toggle/toggle.scss
@@ -1,13 +1,16 @@
 .toggle {
-  display: block;
+  display: flex;
+  gap: 10px;
+  align-items: center;
   max-width: max-content;
-  padding-left: 45px;
   color: $dark-shade-75;
   font-size: $mainFontSize;
   font-family: $mainFont;
   cursor: pointer;
 
   &__button {
+    position: absolute;
+    margin: 0;
     appearance: none;
 
     &:checked + .toggle__slider {
@@ -25,10 +28,9 @@
   }
 
   &__slider {
-    position: absolute;
+    position: relative;
     width: 40px;
     height: 20px;
-    margin-left: -50px;
     border-radius: 10px;
     box-shadow: 0 0 0 1px $dark-shade-25;
 
