--- a/src/components/expandable-checkbox-list/expandable-checkbox-list.pug
+++ b/src/components/expandable-checkbox-list/expandable-checkbox-list.pug
@@ -3,11 +3,12 @@ mixin expandable-checkbox-list({ label, list, expanded = false })
     .expandable-checkbox-list__wrapper.js-expandable-checkbox-list__wrapper
       span.expandable-checkbox-list__label= label
       button.expandable-checkbox-list__button-expand.js-expandable-checkbox-list__button-expand(
-        class=`${expanded && 'expandable-checkbox-list__button-expand_active'}`
+        class= expanded && 'expandable-checkbox-list__button-expand_active'
+        type='button'
       ) expand_more
 
     ul.expandable-checkbox-list__items.js-expandable-checkbox-list__items(
-      class=`${expanded && 'expandable-checkbox-list__items_active'}`
+      class= expanded && 'expandable-checkbox-list__items_active'
     )
       each item in checkboxList
         li.expandable-checkbox-list__item
